Add S3 policy to Lambda role

--- a/notifications.yml
+++ b/notifications.yml
@@ -58,6 +58,15 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Policies:
+        - PolicyName: LambdaBasicExecutionRolePolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                Resource: "*"
   SNSOpsMessagesToSlackLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
