--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -240,6 +240,7 @@ Resources:
                   - "route53:*"
                   - "application-autoscaling:*"
                   - "lambda:*"
+                  - "sns:*"
                 Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
