Work on lambda zip command

--- a/notifications.yml
+++ b/notifications.yml
@@ -64,7 +64,7 @@ Resources:
       Code:
         S3Bucket: !Ref TemplateBucket
         S3Key: "lambdas/sns-ops-to-slack.js.zip"
-      Description: String
+      Description: String # TODO
       Environment:
         Variables:
           SLACK_WEBHOOK_URL: !Ref SlackWebhookURL
