Improve Slack webhook support for multiple services

--- a/root.yml
+++ b/root.yml
@@ -31,14 +31,20 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
-  SlackWebhookURL:
+  AutoScalingSlackWebhookURL:
+    Type: String
+  CloudWatchSlackWebhookURL:
+    Type: String
+  CodePipelineSlackWebhookURL:
     Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       Parameters:
-        SlackWebhookURL: !Ref SlackWebhookURL
+        AutoScalingSlackWebhookURL: !Ref AutoScalingSlackWebhookURL
+        CloudWatchSlackWebhookURL: !Ref CloudWatchSlackWebhookURL
+        CodePipelineSlackWebhookURL: !Ref CodePipelineSlackWebhookURL
         TemplateBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
       TimeoutInMinutes: "2"
