--- a/notifications.yml
+++ b/notifications.yml
@@ -3,7 +3,11 @@ Description: >
   Creates foundational resources needed to handle infrastructure-related
   messaging and notifications
 Parameters:
-  SlackWebhookURL:
+  AutoScalingSlackWebhookURL:
+    Type: String
+  CloudWatchSlackWebhookURL:
+    Type: String
+  CodePipelineSlackWebhookURL:
     Type: String
   TemplateBucket:
     Type: String
@@ -67,7 +71,9 @@ Resources:
       Description: String # TODO
       Environment:
         Variables:
-          SLACK_WEBHOOK_URL: !Ref SlackWebhookURL
+          ASG_SLACK_WEBHOOK_URL: !Ref AutoScalingSlackWebhookURL
+          CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
+          PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
       Handler: sns-ops-to-slack.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
