Improve handling of included Lambda functions

--- a/notifications.yml
+++ b/notifications.yml
@@ -67,14 +67,14 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref TemplateBucket
-        S3Key: "lambdas/sns-ops-to-slack.js.zip"
+        S3Key: "lambdas/sns-ops-to-slack.zip"
       Description: String # TODO
       Environment:
         Variables:
           ASG_SLACK_WEBHOOK_URL: !Ref AutoScalingSlackWebhookURL
           CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
           PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
-      Handler: sns-ops-to-slack.handler
+      Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
       Runtime: nodejs4.3
