--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,13 @@ phases:
   build:
     commands:
       - echo Compressing Lambda functions
-      - cd lambdas && for file in *; do zip -X "$file".zip "$file"; done && cd ..
+      - find * -maxdepth 0 -type d|while read dirname; do
+      -   cd "$dirname"
+      -   zip -r "$dirname" *
+      -   mv "$dirname".zip ..
+      -   cd ..
+      - done
+      - cd ..
       - echo Starting S3 sync to $TEMPLATE_BUCKET
       - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
 artifacts:
