--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,12 +3,8 @@ phases:
   build:
     commands:
       - echo Compressing Lambda functions
-      - find * -maxdepth 0 -type d|while read dirname; do
-      -   cd "$dirname"
-      -   zip -r "$dirname" *
-      -   mv "$dirname".zip ..
-      -   cd ..
-      - done
+      - cd lambdas
+      - find * -maxdepth 0 -type d|while read dirname; do cd "$dirname"; zip -r "$dirname" *; mv "$dirname".zip ..; cd ..; done
       - cd ..
       - echo Starting S3 sync to $TEMPLATE_BUCKET
       - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
