--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,8 @@
+# This buildspec applies the the CodeBuild actions that are part of the
+# bootstrap CodePipeline. Any processes that must complete in order to prepare
+# data or assets for the launch of a root stack can be done as part of this
+# build project (such as cloning template files pulled from GitHub to S3, so
+# that CloudFormation has access to them).
 version: 0.1
 phases:
   build:
@@ -7,5 +12,7 @@ phases:
       - echo Starting S3 sync to $TEMPLATE_BUCKET
       - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
 artifacts:
+  # It seems like CodePipeline and CodeBuild expect an artifact here. Currently
+  # we don't need any, so this is essentially a no-op.
   files:
     - README.md
