Add CodeBuild and CodePipeline policies to CloudFormation role

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -261,6 +261,8 @@ Resources:
                   - "application-autoscaling:*"
                   - "lambda:*"
                   - "sns:*"
+                  - "codepipeline:*"
+                  - "codebuild:*"
                 Resource: "*" # TODO Really?
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
