Hide DependsOn for audiogram pipeline stack

--- a/root.yml
+++ b/root.yml
@@ -76,7 +76,7 @@ Resources:
   #     TimeoutInMinutes: "5"
   AudiogramPipelineStack:
     Type: "AWS::CloudFormation::Stack"
-    DependsOn: ECSClusterStack
+    # DependsOn: ECSClusterStack
     Properties:
       Parameters:
         GitHubOAuthToken: !Ref GitHubOAuthToken
