Disable audiogram pipeline stack

--- a/root.yml
+++ b/root.yml
@@ -74,15 +74,15 @@ Resources:
   #       OpsErrorMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsErrorMessagesSNSTopicArn
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
   #     TimeoutInMinutes: "5"
-  AudiogramPipelineStack:
-    Type: "AWS::CloudFormation::Stack"
-    # DependsOn: ECSClusterStack
-    Properties:
-      Parameters:
-        GitHubOAuthToken: !Ref GitHubOAuthToken
-        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
-      TimeoutInMinutes: "5"
+  # AudiogramPipelineStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   # DependsOn: ECSClusterStack
+  #   Properties:
+  #     Parameters:
+  #       GitHubOAuthToken: !Ref GitHubOAuthToken
+  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
+  #     TimeoutInMinutes: "5"
   # AudiogramStack:
   #   Type: "AWS::CloudFormation::Stack"
   #   DependsOn: ECSClusterStack
