Update ECR policy for audiogram pipeline IAM role

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -81,6 +81,15 @@ Resources:
                   # the project resource is created, and it relies on this IAM
                   # role. Need some way of that not being circular
                   - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*
+        - PolicyName: ECRBasicAcces
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "ecr:*RepositoryPolicy"
+                  - "ecr:GetAuthorizationToken"
+                Resource: "*" # TODO
         - PolicyName: ArtifactStoreBasicAccess
           PolicyDocument:
             Version: "2012-10-17"
