Use Docker runtime for audiogram pipeline CodeBuild

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -150,7 +150,7 @@ Resources:
         # EnvironmentVariables:
         #   - Name: TEMPLATE_BUCKET
         #     Value: !Ref StagingTemplateBucket
-        Image: aws/codebuild/ubuntu-base:14.04
+        Image: aws/codebuild/docker:1.12.1
         Type: LINUX_CONTAINER
       Name: !Sub audiogram-build-${AWS::Region}
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
