Start managing audiogram image tag in template config

--- a/root.yml
+++ b/root.yml
@@ -42,6 +42,8 @@ Parameters:
       A GitHub access token that has permissions for any repositories being
       accessed by these stacks
     Type: String
+  AudiogramDockerImageTag:
+    Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
@@ -80,6 +82,7 @@ Resources:
     Properties:
       Parameters:
         GitHubOAuthToken: !Ref GitHubOAuthToken
+        AudiogramDockerImageTag: !Ref AudiogramDockerImageTag
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
       TimeoutInMinutes: "5"
