Use template config docker tag in task def

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -19,6 +19,8 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
+  AudiogramDockerImageTag:
+    Type: String
   OpsDebugMessagesSNSTopicArn:
     Type: String
 Resources:
@@ -85,7 +87,7 @@ Resources:
             - start
           Cpu: 512
           Essential: true
-          Image: 561178107736.dkr.ecr.us-east-1.amazonaws.com/audiogram.prx.tech:latest
+          Image: !Sub 561178107736.dkr.ecr.us-east-1.amazonaws.com/audiogram.prx.tech:${AudiogramDockerImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
