Pass AWS account ID into CodeBuild env

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -152,6 +152,8 @@ Resources:
         EnvironmentVariables:
           - Name: DOCKER_IMAGE_TAG
             Value: !Ref AudiogramDockerImageTag
+          - Name: AWS_ACCOUNT_ID
+            Value: !Ref AWS::AccountId
         Image: aws/codebuild/docker:1.12.1
         Type: LINUX_CONTAINER
       Name: !Sub audiogram-build-${AWS::Region}
