Clean up ECR policy for audiogram codebuild

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -91,7 +91,11 @@ Resources:
                 Action:
                   - "ecr:*RepositoryPolicy"
                   - "ecr:GetAuthorizationToken"
-                Resource: "*" # TODO
+                  - "ecr:InitiateLayerUpload"
+                  - "ecr:CompleteLayerUpload"
+                  - "ecr:UploadLayerPart"
+                  - "ecr:PutImage"
+                Resource: "arn:aws:ecr:us-east-1:561178107736:repository/audiogram.prx.tech"
         - PolicyName: ArtifactStoreBasicAccess
           PolicyDocument:
             Version: "2012-10-17"
