--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -95,7 +95,12 @@ Resources:
                   - "ecr:CompleteLayerUpload"
                   - "ecr:UploadLayerPart"
                   - "ecr:PutImage"
+                # TODO maybe make name a template config param?
                 Resource: "arn:aws:ecr:us-east-1:561178107736:repository/audiogram.prx.tech"
+              - Effect: Allow
+                Action:
+                  - "ecr:GetAuthorizationToken"
+                Resource: "*"
         - PolicyName: ArtifactStoreBasicAccess
           PolicyDocument:
             Version: "2012-10-17"
