Clean up audiogram ECR parameters

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -19,7 +19,11 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  AudiogramDockerImageTag:
+  AudiogramECRRegion:
+    Type: String
+  AudiogramECRRepositoryName:
+    Type: String
+  AudiogramECRImageTag:
     Type: String
   OpsDebugMessagesSNSTopicArn:
     Type: String
@@ -87,7 +91,7 @@ Resources:
             - start
           Cpu: 512
           Essential: true
-          Image: !Sub 561178107736.dkr.ecr.us-east-1.amazonaws.com/audiogram.prx.tech:${AudiogramDockerImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${AudiogramECRRegion}.amazonaws.com/${AudiogramECRRepositoryName}:${AudiogramECRImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
