--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -6,7 +6,11 @@ Parameters:
     Type: String
   GitHubOAuthToken:
     Type: String
-  AudiogramDockerImageTag:
+  AudiogramECRRegion:
+    Type: String
+  AudiogramECRRepositoryName:
+    Type: String
+  AudiogramECRImageTag:
     Type: String
 Resources:
   ArtifactStore:
@@ -159,10 +163,14 @@ Resources:
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         EnvironmentVariables:
-          - Name: DOCKER_IMAGE_TAG
-            Value: !Ref AudiogramDockerImageTag
           - Name: AWS_ACCOUNT_ID
             Value: !Ref AWS::AccountId
+          - Name: ECR_REGION
+            Value: !Ref AudiogramECRRegion
+          - Name: ECR_REPOSITORY_NAME
+            Value: !Ref AudiogramECRRepositoryName
+          - Name: ECR_IMAGE_TAG
+            Value: !Ref AudiogramECRImageTag
         Image: aws/codebuild/docker:1.12.1
         Type: LINUX_CONTAINER
       Name: !Sub audiogram-build-${AWS::Region}
