--- a/root.yml
+++ b/root.yml
@@ -42,7 +42,11 @@ Parameters:
       A GitHub access token that has permissions for any repositories being
       accessed by these stacks
     Type: String
-  AudiogramDockerImageTag:
+  AudiogramECRRegion:
+    Type: String
+  AudiogramECRRepositoryName:
+    Type: String
+  AudiogramECRImageTag:
     Type: String
 Resources:
   NotificationsStack:
@@ -82,7 +86,9 @@ Resources:
     Properties:
       Parameters:
         GitHubOAuthToken: !Ref GitHubOAuthToken
-        AudiogramDockerImageTag: !Ref AudiogramDockerImageTag
+        AudiogramECRRegion: !Ref AudiogramECRRegion
+        AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
+        AudiogramECRImageTag: !Ref AudiogramECRImageTag
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
       TimeoutInMinutes: "5"
@@ -99,7 +105,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-        AudiogramDockerImageTag: !Ref AudiogramDockerImageTag
+        AudiogramECRRegion: !Ref AudiogramECRRegion
+        AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
+        AudiogramECRImageTag: !Ref AudiogramECRImageTag
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
       TimeoutInMinutes: "5"
