--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -94,6 +94,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - "ecr:*RepositoryPolicy"
+                  - "ecr:BatchCheckLayerAvailability"
                   - "ecr:GetAuthorizationToken"
                   - "ecr:InitiateLayerUpload"
                   - "ecr:CompleteLayerUpload"
