Add parameter overrides to root stack
This is for passing the template config that’s already a param on the
bootstrap stack to the staging root stack

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -333,10 +333,11 @@ Resources:
                 ChangeSetName: !Sub ${RootStackName}ChangeSetStaging
                 # TODO Nest notifications stack in Bootstrap, and pass SNS
                 # topic ARN's to root stacks
-                # ParameterOverrides:
-                #   {
-                #
-                #   }
+                ParameterOverrides: !Sub |
+                  {
+                    "RootStackTemplateConfigBucket": "${RootStackTemplateConfigBucket}",
+                    "RootStackTemplateConfigArchive": "${RootStackTemplateConfigArchive}"
+                  }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${RootStackName}-Staging
                 TemplateConfiguration: TemplateConfigZipArtifact::staging.json
@@ -348,8 +349,8 @@ Resources:
                 Owner: AWS
                 Provider: Manual
                 Version: 1
-              Configuration:
-                NotificationArn:
+              # Configuration:
+                # NotificationArn:
               RunOrder: 3
             - Name: ExecuteChangeSet
               ActionTypeId:
