Fix typo in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,4 @@
-# This buildspec applies the the CodeBuild actions that are part of the
+# This buildspec applies to the CodeBuild actions that are part of the
 # bootstrap CodePipeline. Any processes that must complete in order to prepare
 # data or assets for the launch of a root stack can be done as part of this
 # build project (such as cloning template files pulled from GitHub to S3, so
