Pass template config params around as necessary

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -6,6 +6,10 @@ Parameters:
     Type: String
   GitHubOAuthToken:
     Type: String
+  RootStackTemplateConfigBucket:
+    Type: String
+  RootStackTemplateConfigArchive:
+    Type: String
   AudiogramECRRegion:
     Type: String
   AudiogramECRRepositoryName:
