--- a/root.yml
+++ b/root.yml
@@ -31,6 +31,10 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
+  RootStackTemplateConfigBucket:
+    Type: String
+  RootStackTemplateConfigArchive:
+    Type: String
   AutoScalingSlackWebhookURL:
     Type: String
   CloudWatchSlackWebhookURL:
@@ -82,10 +86,12 @@ Resources:
       TimeoutInMinutes: "5"
   AudiogramPipelineStack:
     Type: "AWS::CloudFormation::Stack"
-    # DependsOn: ECSClusterStack
+    DependsOn: ECSClusterStack
     Properties:
       Parameters:
         GitHubOAuthToken: !Ref GitHubOAuthToken
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
         AudiogramECRRegion: !Ref AudiogramECRRegion
         AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
         AudiogramECRImageTag: !Ref AudiogramECRImageTag
