--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -98,7 +98,7 @@ Resources:
               awslogs-group: !Ref AudiogramLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: 384
-          Name: audiogram-aio
+          Name: audiogram-aio # TODO better name
           PortMappings:
             - HostPort: 0
               ContainerPort: 8888
@@ -112,7 +112,7 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: 1
       LoadBalancers:
-        - ContainerName: audiogram-aio
+        - ContainerName: audiogram-aio # TODO better name
           ContainerPort: 8888
           TargetGroupArn: !Ref AudiogramALBTargetGroup
       Role: !Ref ECSServiceIAMRole
