Add S3 policy for CodeBuild role for template bucket

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -120,6 +120,16 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource: !Sub arn:aws:s3:::${ArtifactStore}/*
+        - PolicyName: TemplateConfigStoreBasicAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:PutObject"
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
+                Resource: !Sub arn:aws:s3:::${RootStackTemplateConfigBucket}/*
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
     Properties:
