Pass template params to CodeBuild env

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -180,6 +180,10 @@ Resources:
         EnvironmentVariables:
           - Name: AWS_ACCOUNT_ID
             Value: !Ref AWS::AccountId
+          - Name: TEMPLATE_CONFIG_BUCKET
+            Value: !Ref RootStackTemplateConfigBucket
+          - Name: TEMPLATE_CONFIG_ARTIFACT
+            Value: !Ref RootStackTemplateConfigArchive
           - Name: ECR_REGION
             Value: !Ref AudiogramECRRegion
           - Name: ECR_REPOSITORY_NAME
@@ -188,7 +192,7 @@ Resources:
             Value: !Ref AudiogramECRImageTag
         Image: aws/codebuild/docker:1.12.1
         Type: LINUX_CONTAINER
-      Name: !Sub audiogram-build-${AWS::Region}
+      Name: !Sub audiogram-build-${AWS::Region} # TODO better name
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         Type: CODEPIPELINE
