--- a/root.yml
+++ b/root.yml
@@ -117,3 +117,7 @@ Resources:
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
       TimeoutInMinutes: "5"
+Outputs:
+  AudiogramHostedZoneDNSName:
+    Description: Domain name for audiogram app
+    Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
