Set RestartExecutionOnUpdate to false on audiogram pipeline

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -136,6 +136,7 @@ Resources:
       ArtifactStore:
         Location: !Ref ArtifactStore
         Type: S3
+      RestartExecutionOnUpdate: false
       RoleArn: !GetAtt CodePipelineIAMRole.Arn
       Stages:
         - Name: Source
