--- a/root.yml
+++ b/root.yml
@@ -35,6 +35,8 @@ Parameters:
     Type: String
   RootStackTemplateConfigArchive:
     Type: String
+  OpsStatusMessagesSNSTopicArn:
+    Type: String
   AutoScalingSlackWebhookURL:
     Type: String
   CloudWatchSlackWebhookURL:
@@ -57,6 +59,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       Parameters:
+        OpsStatusMessagesSNSTopicArn: !Ref OpsStatusMessagesSNSTopicArn
         AutoScalingSlackWebhookURL: !Ref AutoScalingSlackWebhookURL
         CloudWatchSlackWebhookURL: !Ref CloudWatchSlackWebhookURL
         CodePipelineSlackWebhookURL: !Ref CodePipelineSlackWebhookURL
