Output status topic ARN for consistency

--- a/notifications.yml
+++ b/notifications.yml
@@ -138,6 +138,8 @@ Resources:
       Principal: sns.amazonaws.com
       SourceArn: !Ref OpsFatalMessagesSNSTopic
 Outputs:
+  OpsStatusMessagesSNSTopicArn:
+    Value: !Ref OpsStatusMessagesSNSTopicArn
   OpsDebugMessagesSNSTopicArn:
     Value: !Ref OpsDebugMessagesSNSTopic
   OpsInfoMessagesSNSTopicArn:
