Add status notification to staging changeset approval

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -343,8 +343,8 @@ Resources:
                 Owner: AWS
                 Provider: Manual
                 Version: 1
-              # Configuration:
-                # NotificationArn:
+              Configuration:
+                NotificationArn: !Ref OpsStatusMessagesSNSTopic
               RunOrder: 3
             - Name: ExecuteChangeSet
               ActionTypeId:
