Add SNS publish policy to bootstrap pipeline role

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -105,6 +105,15 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
+        - PolicyName: StatusSNSPublishPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "sns:Publish"
+                Resource:
+                  - !Ref OpsStatusMessagesSNSTopic
         - PolicyName: ArtifactStoreFullAccess
           PolicyDocument:
             Version: "2012-10-17"
