--- a/root.yml
+++ b/root.yml
@@ -54,6 +54,32 @@ Parameters:
     Type: String
   AudiogramECRImageTag:
     Type: String
+  PublishECRRegion:
+    Type: String
+  PublishECRRepositoryName:
+    Type: String
+  PublishECRImageTag:
+    Type: String
+  PublishEnvAuthClientId:
+    Type: String
+  PublishEnvAuthHost:
+    Type: String
+  PublishEnvAwsKey:
+    Type: String
+  PublishEnvAwsUrl:
+    Type: String
+  PublishEnvBucketFolder:
+    Type: String
+  PublishEnvBucketName:
+    Type: String
+  PublishEnvCmsHost:
+    Type: String
+  PublishEnvPlayHost:
+    Type: String
+  PublishEnvSignUrl:
+    Type: String
+  PublishEnvUseCloudfront:
+    Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
@@ -120,7 +146,39 @@ Resources:
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
       TimeoutInMinutes: "5"
+  PublishStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        RootStackName: !Ref AWS::StackName
+        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        PublishECRRegion: !Ref PublishECRRegion
+        PublishECRRepositoryName: !Ref PublishECRRepositoryName
+        PublishECRImageTag: !Ref PublishECRImageTag
+        PublishEnvAuthClientId: !Ref PublishEnvAuthClientId
+        PublishEnvAuthHost: !Ref PublishEnvAuthHost
+        PublishEnvAwsKey: !Ref PublishEnvAwsKey
+        PublishEnvAwsUrl: !Ref PublishEnvAwsUrl
+        PublishEnvBucketFolder: !Ref PublishEnvBucketFolder
+        PublishEnvBucketName: !Ref PublishEnvBucketName
+        PublishEnvCmsHost: !Ref PublishEnvCmsHost
+        PublishEnvPlayHost: !Ref PublishEnvPlayHost
+        PublishEnvSignUrl: !Ref PublishEnvSignUrl
+        PublishEnvUseCloudfront: !Ref PublishEnvUseCloudfront
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
+      TimeoutInMinutes: "5"
 Outputs:
   AudiogramHostedZoneDNSName:
     Description: Domain name for audiogram app
     Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
+  PublishHostedZoneDNSName:
+    Description: Domain name for publish app
+    Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
